--- a/module_home/src/main/res/layout/home_frag_entrance.xml
+++ b/module_home/src/main/res/layout/home_frag_entrance.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="me.goldze.mvvmhabit.base.BaseViewModel" />
+            type="com.lcworld.module_home.viewmodel.HomeViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
