商品详情接口调试

--- a/library_res/src/main/res/values/config_string.xml
+++ b/library_res/src/main/res/values/config_string.xml
@@ -33,4 +33,10 @@
         <item>recommend</item>
     </string-array>
 
+    //商品类型NORMAL普通POINT积分SHANGBI商币
+    <string-array name="goods_type">
+        <item>NORMAL</item>
+        <item>POINT</item>
+        <item>SHANGBI</item>
+    </string-array>
 </resources>
