--- a/module_exchange/src/main/res/layout/exchange_activity_wallet.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_wallet.xml
@@ -2,7 +2,7 @@
 <layout>
     <data>
         <variable
-                name="viewmodel"
+                name="viewModel"
                 type="com.lcworld.module_exchange.viewmodel.WalletViewModel"/>
     </data>
     <android.support.constraint.ConstraintLayout
