接口调试： 加入购物车 确认购买 SKU

--- a/library_res/src/main/res/values/config_string.xml
+++ b/library_res/src/main/res/values/config_string.xml
@@ -35,8 +35,9 @@
 
     //商品类型NORMAL普通POINT积分SHANGBI商币
     <string-array name="goods_type">
-        <item>NORMAL</item>
-        <item>POINT</item>
-        <item>SHANGBI</item>
+        <item>normal</item>
+        <item>point</item>
+        <item>shangbi</item>
+        <item>pintuan</item>
     </string-array>
 </resources>
