--- a/module_order/src/main/res/layout/order_item_goods.xml
+++ b/module_order/src/main/res/layout/order_item_goods.xml
@@ -1,138 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="wrap_content">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:background="@color/white"
+                                             android:layout_height="wrap_content">
 
     <View
-        android:id="@+id/line_top"
-        android:background="@color/appbg_color"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/gap_size6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/line_top"
+            android:background="@color/appbg_color"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/gap_size6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
-        android:id="@+id/iv_photo"
-        android:layout_width="0dp"
-        android:src="@color/orange"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/gap_size17"
-        android:layout_marginTop="@dimen/gap_size19"
-        app:layout_constraintDimensionRatio="106:82"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.30" />
+            android:id="@+id/iv_photo"
+            android:layout_width="0dp"
+            android:src="@color/orange"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/gap_size17"
+            android:layout_marginTop="@dimen/gap_size19"
+            app:layout_constraintDimensionRatio="106:82"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.30"/>
 
     <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="0dp"
-        android:layout_marginEnd="@dimen/gap_size17"
-        android:layout_marginStart="@dimen/gap_size12"
-        android:layout_marginTop="@dimen/gap_size4"
-        android:textSize="@dimen/tx_size13"
-        android:textColor="@color/tx_colorb"
-        android:maxLength="3"
-        android:ellipsize="end"
-        android:layout_marginBottom="@dimen/gap_size5"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/bg_num"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_photo"
-        app:layout_constraintTop_toTopOf="@id/iv_photo"
-        tools:text="名字" />
+            android:id="@+id/tv_name"
+            android:layout_width="0dp"
+            android:layout_marginEnd="@dimen/gap_size17"
+            android:layout_marginStart="@dimen/gap_size12"
+            android:layout_marginTop="@dimen/gap_size4"
+            android:textSize="@dimen/tx_size13"
+            android:textColor="@color/tx_colorb"
+            android:maxLength="3"
+            android:ellipsize="end"
+            android:layout_marginBottom="@dimen/gap_size5"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/bg_num"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_photo"
+            app:layout_constraintTop_toTopOf="@id/iv_photo"
+            tools:text="名字"/>
 
     <TextView
-        android:id="@+id/tv_price"
-        android:layout_width="0dp"
-        android:textColor="@color/tx_colore"
-        android:textSize="@dimen/tx_size15"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:layout_marginEnd="@dimen/gap_size10"
-        android:layout_marginBottom="@dimen/gap_size5"
-        app:layout_constraintBottom_toBottomOf="@id/iv_photo"
-        app:layout_constraintEnd_toStartOf="@id/bg_num"
-        app:layout_constraintStart_toStartOf="@id/tv_name"
-        tools:text="¥152222222222222222" />
+            android:id="@+id/tv_price"
+            android:layout_width="0dp"
+            android:textColor="@color/tx_colore"
+            android:textSize="@dimen/tx_size15"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:layout_marginEnd="@dimen/gap_size10"
+            android:layout_marginBottom="@dimen/gap_size5"
+            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
+            app:layout_constraintEnd_toStartOf="@id/bg_num"
+            app:layout_constraintStart_toStartOf="@id/tv_name"
+            tools:text="¥152222222222222222"/>
 
     <View
-        android:id="@+id/bg_num"
-        android:layout_width="0dp"
-        android:layout_marginEnd="@dimen/gap_size17"
-        android:background="@drawable/order_shape_shoppingcart_num"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_price"
-        app:layout_constraintDimensionRatio="63:17"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.18" />
+            android:id="@+id/bg_num"
+            android:layout_width="0dp"
+            android:layout_marginEnd="@dimen/gap_size17"
+            android:background="@drawable/order_shape_shoppingcart_num"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_price"
+            app:layout_constraintDimensionRatio="63:17"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.18"/>
 
     <View
-        android:id="@+id/line_sub"
-        android:layout_width="1dp"
-        android:background="@color/line_colorc"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/gap_size18"
-        app:layout_constraintBottom_toBottomOf="@id/bg_num"
-        app:layout_constraintStart_toStartOf="@id/bg_num"
-        app:layout_constraintTop_toTopOf="@id/bg_num" />
+            android:id="@+id/line_sub"
+            android:layout_width="1dp"
+            android:background="@color/line_colorc"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/gap_size18"
+            app:layout_constraintBottom_toBottomOf="@id/bg_num"
+            app:layout_constraintStart_toStartOf="@id/bg_num"
+            app:layout_constraintTop_toTopOf="@id/bg_num"/>
 
     <View
-        android:id="@+id/line_add"
-        android:layout_width="1dp"
-        android:background="@color/line_colorc"
-        android:layout_height="0dp"
-        android:layout_marginEnd="@dimen/gap_size18"
-        app:layout_constraintBottom_toBottomOf="@id/bg_num"
-        app:layout_constraintEnd_toEndOf="@id/bg_num"
-        app:layout_constraintTop_toTopOf="@id/bg_num" />
+            android:id="@+id/line_add"
+            android:layout_width="1dp"
+            android:background="@color/line_colorc"
+            android:layout_height="0dp"
+            android:layout_marginEnd="@dimen/gap_size18"
+            app:layout_constraintBottom_toBottomOf="@id/bg_num"
+            app:layout_constraintEnd_toEndOf="@id/bg_num"
+            app:layout_constraintTop_toTopOf="@id/bg_num"/>
 
     <TextView
-        android:id="@+id/tv_operate_sub"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/order_trolley_sub"
-        android:textSize="@dimen/tx_size15"
-        android:gravity="center"
-        android:textColor="@color/tx_colorc"
-        app:layout_constraintBottom_toBottomOf="@id/bg_num"
-        app:layout_constraintEnd_toEndOf="@id/line_sub"
-        app:layout_constraintStart_toStartOf="@id/bg_num"
-        app:layout_constraintTop_toTopOf="@id/bg_num" />
+            android:id="@+id/tv_operate_sub"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="@string/order_trolley_sub"
+            android:textSize="@dimen/tx_size15"
+            android:gravity="center"
+            android:textColor="@color/tx_colorc"
+            app:layout_constraintBottom_toBottomOf="@id/bg_num"
+            app:layout_constraintEnd_toEndOf="@id/line_sub"
+            app:layout_constraintStart_toStartOf="@id/bg_num"
+            app:layout_constraintTop_toTopOf="@id/bg_num"/>
 
     <TextView
-        android:id="@+id/view_operate_add"
-        android:layout_width="0dp"
-        android:gravity="center"
-        android:layout_height="0dp"
-        android:textColor="@color/tx_colorc"
-        android:textSize="@dimen/tx_size15"
-        android:text="@string/order_trolley_add"
-        app:layout_constraintBottom_toBottomOf="@id/bg_num"
-        app:layout_constraintEnd_toEndOf="@id/bg_num"
-        app:layout_constraintStart_toStartOf="@id/line_add"
-        app:layout_constraintTop_toTopOf="@id/bg_num" />
+            android:id="@+id/view_operate_add"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:layout_height="0dp"
+            android:textColor="@color/tx_colorc"
+            android:textSize="@dimen/tx_size15"
+            android:text="@string/order_trolley_add"
+            app:layout_constraintBottom_toBottomOf="@id/bg_num"
+            app:layout_constraintEnd_toEndOf="@id/bg_num"
+            app:layout_constraintStart_toStartOf="@id/line_add"
+            app:layout_constraintTop_toTopOf="@id/bg_num"/>
 
     <TextView
-        android:textSize="@dimen/tx_size11"
-        android:textColor="@color/tx_colorc"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@id/bg_num"
-        app:layout_constraintEnd_toEndOf="@id/line_add"
-        app:layout_constraintStart_toStartOf="@id/line_sub"
-        app:layout_constraintTop_toTopOf="@id/bg_num"
-        tools:text="11" />
+            android:id="@+id/tv_operate_num"
+            android:textSize="@dimen/tx_size11"
+            android:textColor="@color/tx_colorc"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@id/bg_num"
+            app:layout_constraintEnd_toEndOf="@id/line_add"
+            app:layout_constraintStart_toStartOf="@id/line_sub"
+            app:layout_constraintTop_toTopOf="@id/bg_num"
+            tools:text="11"/>
 
     <View
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/gap_size19"
-        android:layout_height="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_photo" />
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/gap_size19"
+            android:layout_height="1dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_photo"/>
 </android.support.constraint.ConstraintLayout>
