--- a/module_exchange/src/main/res/layout/exchange_activity_wallet.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_wallet.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
                 name="viewModel"
                 type="com.lcworld.module_exchange.viewmodel.WalletViewModel"/>
     </data>
+
     <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
-
-        <android.support.constraint.Barrier
-                android:id="@+id/barrier_top"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="bottom"
-                app:constraint_referenced_ids="bg_title,tv_title,iv_back"/>
 
         <ScrollView
                 android:id="@+id/scrollview"
@@ -27,7 +23,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/barrier_top"
+                app:layout_constraintTop_toBottomOf="@id/layout_title"
                 >
 
             <android.support.constraint.ConstraintLayout
@@ -114,7 +110,7 @@
                         app:layout_constraintRight_toRightOf="@id/bg_balance"
                         app:layout_constraintBottom_toBottomOf="@id/bg_balance"
                         app:layout_constraintTop_toTopOf="@id/bg_balance"
-                        android:text="@string/exchange_money"
+                        android:text="@{viewModel.balance}"
                         android:layout_marginStart="8dp"
                         android:textColor="@color/tx_colorf"
                         android:textSize="@dimen/tx_size23"
@@ -126,7 +122,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/tx_size15"
                         android:textColor="@color/tx_colorf"
-                        android:text="@string/exchange_settlement_income"
+                        android:text="@{viewModel.income}"
                         app:layout_constraintLeft_toLeftOf="@id/bg_balance"
                         app:layout_constraintRight_toRightOf="@id/bg_balance"
                         app:layout_constraintBottom_toBottomOf="@id/bg_balance"
@@ -143,6 +139,7 @@
                         app:layout_constraintRight_toLeftOf="@+id/bg_withdraw"
                         app:layout_constraintTop_toBottomOf="@id/bg_balance"
                         android:background="@drawable/selector_btnbg_c"
+                        app:onClickCommand="@{viewModel.rechargeOnClickCommand}"
                         />
 
                 <ImageView
@@ -191,6 +188,7 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/bg_balance"
                         android:background="@drawable/selector_btnbg_c"
+                        app:onClickCommand="@{viewModel.withDrawOnClickCommand}"
                         />
 
                 <ImageView
@@ -227,7 +225,8 @@
                         android:background="@color/appbg_color_white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/bg_withdraw"/>
+                        app:layout_constraintTop_toBottomOf="@id/bg_withdraw"
+                        app:onClickCommand="@{viewModel.bankcardOnClickCommand}"/>
 
                 <ImageView
                         android:id="@+id/iv_bankcard"
@@ -277,7 +276,8 @@
                         android:background="@color/appbg_color_white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/bg_bankcard"/>
+                        app:layout_constraintTop_toBottomOf="@id/bg_bankcard"
+                        app:onClickCommand="@{viewModel.billOnClickCommand}"/>
 
                 <ImageView
                         android:id="@+id/iv_bill"
@@ -326,7 +326,8 @@
                         android:background="@color/appbg_color_white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/bg_bill"/>
+                        app:layout_constraintTop_toBottomOf="@id/bg_bill"
+                        app:onClickCommand="@{viewModel.orderOnClickCommand}"/>
 
                 <ImageView
                         android:id="@+id/iv_order"
@@ -376,7 +377,8 @@
                         android:layout_marginTop="@dimen/gap_size8"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/bg_order"/>
+                        app:layout_constraintTop_toBottomOf="@id/bg_order"
+                        app:onClickCommand="@{viewModel.chainOnClickCommand}"/>
 
                 <ImageView
                         android:id="@+id/iv_commodity_chain"
@@ -411,42 +413,9 @@
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
 
-        <!--标题背景-->
-        <View
-                android:id="@+id/bg_title"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-        <!--标题-->
-        <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:text="@string/exchange_wallet"
-                android:layout_height="wrap_content"
-                android:textColor="@color/tx_colorb"
-                android:textSize="@dimen/tx_size15"
-                android:layout_marginTop="31dp"
-                android:paddingBottom="@dimen/gap_size18"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-        <!--设置-->
-        <ImageView
-                android:id="@+id/iv_back"
-                android:layout_width="wrap_content"
-                android:src="@mipmap/arrow_left1"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/gap_size13"
-                android:paddingEnd="@dimen/gap_size13"
-                android:layout_marginTop="33dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/image_description_back"/>
+        <include
+                android:id="@+id/layout_title"
+                layout="@layout/exchange_layout_title"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
