接口调试： 地址相关接口

--- a/module_home/src/main/res/layout/home_frag_member_goods.xml
+++ b/module_home/src/main/res/layout/home_frag_member_goods.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewmodel"
-            type="me.goldze.mvvmhabit.base.BaseViewModel" />
+            type="com.lcworld.module_home.viewmodel.HomeMemberViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
